brat/test/golden/error/badvec2.brat.golden
Error in test/golden/error/badvec2.brat on line 2:
v3 = nil
     ^^^

  Unification error: Couldn't force 3 to be 0

